--- a/webpack4/package.json
+++ b/webpack4/package.json
@@ -1,16 +1,20 @@
 {
-  "name": "webpack4",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "webpack": "^4.44.2",
-    "webpack-cli": "^4.2.0"
-  }
+	"name": "webpack4",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"serve": "webpack-dev-server",
+		"biud": "webpack"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"devDependencies": {
+		"clean-webpack-plugin": "^3.0.0",
+		"html-webpack-plugin": "^4.5.0",
+		"webpack": "^4.44.2",
+		"webpack-cli": "^4.2.0",
+		"webpack-dev-server": "^2.9.7"
+	}
 }
