--- a/webpack4/package.json
+++ b/webpack4/package.json
@@ -16,5 +16,8 @@
     "webpack": "^5.6.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
+  },
+  "dependencies": {
+    "axios": "^0.21.0"
   }
 }
