--- a/webpack4/package.json
+++ b/webpack4/package.json
@@ -5,19 +5,38 @@
   "main": "index.js",
   "scripts": {
     "serve": "webpack-dev-server",
-    "biud": "webpack"
+    "blud": "webpack"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.12.7",
+    "@babel/plugin-transform-runtime": "^7.12.1",
+    "@babel/preset-env": "^7.12.7",
+    "babel-loader": "^8.2.1",
+    "bable-loader": "0.0.1-security",
     "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^5.0.1",
     "html-webpack-plugin": "^4.5.0",
+    "mini-css-extract-plugin": "^1.3.1",
+    "optimize-css-assets-webpack-plugin": "^5.0.4",
+    "postcss-loader": "^4.1.0",
+    "style-loader": "^2.0.0",
+    "terser-webpack-plugin": "^5.0.3",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^5.6.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
-    "axios": "^0.21.0"
-  }
+    "@babel/polyfill": "^7.12.1",
+    "@babel/runtime": "^7.12.5",
+    "axios": "^0.21.0",
+    "jquery": "^3.5.1"
+  },
+  "browserslist": [
+    ">1%",
+    "last 2 versions"
+  ]
 }
