--- a/webpack_dome/package.json
+++ b/webpack_dome/package.json
@@ -1,42 +1,41 @@
 {
-  "name": "webpack5",
+  "name": "webpackmodel",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "serve": "webpack-dev-server",
-    "blud": "webpack"
+    "blud": "webpack",
+    "serve": "webpack-dev-server --color"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.12.7",
-    "@babel/plugin-transform-runtime": "^7.12.1",
-    "@babel/preset-env": "^7.12.7",
-    "babel-loader": "^8.2.1",
-    "bable-loader": "0.0.1-security",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.1",
+    "expose-loader": "^1.0.1",
+    "file-loader": "^6.2.0",
+    "html-loader": "^1.3.2",
     "html-webpack-plugin": "^4.5.0",
+    "imports-loader": "^1.2.0",
     "mini-css-extract-plugin": "^1.3.1",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
     "postcss-loader": "^4.1.0",
     "style-loader": "^2.0.0",
     "terser-webpack-plugin": "^5.0.3",
     "uglifyjs-webpack-plugin": "^2.2.0",
+    "url-loader": "^4.1.1",
     "webpack": "^5.6.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.12.1",
-    "@babel/runtime": "^7.12.5",
+    "autoprefixer": "^10.0.2",
     "axios": "^0.21.0",
     "jquery": "^3.5.1"
   },
   "browserslist": [
-    ">1%",
+    ">0.1%",
     "last 2 versions"
   ]
 }
